changed image path

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav>
         <div class="container main_nav flex">
             <a href="#" class="company_logo">
-                <img src="assets\asset 1.png" alt="company-logo">
+                <img src="asset 1.png" alt="company-logo">
             </a>
             <div class="nav_links">
                 <ul class="flex">
@@ -56,7 +56,7 @@
                 <a href="#" class="primary-button get_started_button">Get Started</a>
             </div>
             <div class="header_right">
-                <img src="assets\asset 2.png" alt="asset 2 pic" width="600px">
+                <img src="asset 2.png" alt="asset 2 pic" width="600px">
             </div>
         </div>
     </header>
@@ -65,13 +65,13 @@
             <div class="small-bold-text companies_header">
                 The world’s best companies rely on UsabilityHub to make better design decisions.
                 <div class="logos flex">
-                    <img class="logo" src="assets\asset 3.png" alt="logo">
-                    <img class="logo" src="assets\asset 4.png" alt="logo">
-                    <img class="logo" src="assets\asset 5.png" alt="logo">
-                    <img class="logo" src="assets\asset 6.png" alt="logo">
-                    <img class="logo" src="assets\asset 7.png" alt="logo">
-                    <img class="logo" src="assets\asset 8.svg " alt="logo">
-                    <img class="logo" src="assets\asset 9.png" alt="logo">
+                    <img class="logo" src="asset 3.png" alt="logo">
+                    <img class="logo" src="asset 4.png" alt="logo">
+                    <img class="logo" src="asset 5.png" alt="logo">
+                    <img class="logo" src="asset 6.png" alt="logo">
+                    <img class="logo" src="asset 7.png" alt="logo">
+                    <img class="logo" src="asset 8.svg " alt="logo">
+                    <img class="logo" src="asset 9.png" alt="logo">
                 </div>
             </div>
         </div>
@@ -86,42 +86,42 @@
             </div>
             <div class="feature_box flex">
                 <div class="features_slip flex">
-                    <img src="assets\asset 11.svg" height=50px alt>
+                    <img src="asset 11.svg" height=50px alt>
                     <h3>Card Sorting</h3>
                     <p>Discover how people group and label information.</p>
                     <a href="#" class="secondary_button learn_more_button">Learn More<i
                             class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features_slip flex">
-                    <img src="assets\asset 13.svg" height=50px alt>
+                    <img src="asset 13.svg" height=50px alt>
                     <h3>Prototype tests</h3>
                     <p>Discover how people navigate your Figma prototypes.</p>
                     <a href="#" class="secondary_button learn_more_button">Learn More<i
                             class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features_slip flex">
-                    <img src="assets\asset 14.svg" height=50px alt>
+                    <img src="asset 14.svg" height=50px alt>
                     <h3>First click tests</h3>
                     <p>Test interaction with first click and navigation tests.</p>
                     <a href="#" class="secondary_button learn_more_button">Learn More<i
                             class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features_slip flex">
-                    <img src="assets\asset 15.svg" height=50px alt>
+                    <img src="asset 15.svg" height=50px alt>
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary_button learn_more_button">Learn More<i
                             class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features_slip flex">
-                    <img src="assets\asset 16.svg" height=50px alt>
+                    <img src="asset 16.svg" height=50px alt>
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary_button learn_more_button">Learn More<i
                             class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features_slip flex">
-                    <img src="assets\asset 17.svg" height=50px alt>
+                    <img src="asset 17.svg" height=50px alt>
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
                     <a href="#" class="secondary_button learn_more_button">Learn More<i
@@ -132,7 +132,7 @@
     <section class="feature2">
         <div class="container flex feature-container">
             <div class="feature2-img">
-                <img src="assets\asset 18.png">
+                <img src="asset 18.png">
             </div>
             <div class="right_container flex">
                 <h4>Effortless validation for</h4>
@@ -151,14 +151,14 @@
                     campaigns and product launches.</p>
             </div>
             <div class="feature2-img">
-                <img src="assets\asset 21.png">
+                <img src="asset 21.png">
             </div>
          </div>
     </section>
     <section class="feature4">
         <div class="container flex feature-container">
             <div class="feature2-img">
-                <img src="assets\asset 24.png">
+                <img src="asset 24.png">
             </div>
             <div class="right_container flex">
                 <h4>Easier decision making for</h4>
@@ -219,8 +219,8 @@
 
             </div>
             <div class="right_cta">
-                <img src="assets\asset 40.png" alt="" width="600px" style="position:absolute;">
-                <img src="assets\asset 41.png" alt=""  class="right_cta_img">
+                <img src="asset 40.png" alt="" width="600px" style="position:absolute;">
+                <img src="asset 41.png" alt=""  class="right_cta_img">
 
                 <div class="right_cta_text">
                  <p>Start from <span class="USD"><br>USD $ </span><span style="color:blue; font-size:xx-large; font-weight:bolder;" > 1</span><br>per response</p> 
@@ -241,7 +241,7 @@
             <div class="subfooter flex container">
             <div class="company_logo">
                 <a href="#" class="company_logo" style="margin-block:20px;">
-                    <img src="assets\asset 1.png" alt="company-logo">
+                    <img src="asset 1.png" alt="company-logo">
                 </a>
             </div>
             <div class="subfooter_parts flex"><h4>Product</h4>
@@ -277,10 +277,10 @@
 <a href="#">Security information</a>
         </div>
         <div class="footers_logos flex">
-            <a href="#"><img src="assets\asset 28.png"alt="facebook" height="20px"></a>
-            <a href="#"><img src="assets\asset 29.png"alt="twitter" height="20px"></a>
-            <a href="#"><img src="assets\asset 30.png"alt="linkedin" height="20px"></a>
-            <a href="#"><img src="assets\asset 31.png"alt="youtube" height="20px"></a>
+            <a href="#"><img src="asset 28.png"alt="facebook" height="20px"></a>
+            <a href="#"><img src="asset 29.png"alt="twitter" height="20px"></a>
+            <a href="#"><img src="asset 30.png"alt="linkedin" height="20px"></a>
+            <a href="#"><img src="asset 31.png"alt="youtube" height="20px"></a>
 
         </div>
 
